tests/baselines/reference/isolatedModulesGlobalNamespacesAndEnums.errors.txt
enum1.ts(1,6): error TS2567: Enum declarations can only merge with namespace declarations.
enum1.ts(2,14): error TS2567: Enum declarations can only merge with namespace declarations.
enum2.ts(1,6): error TS2567: Enum declarations can only merge with namespace declarations.
enum2.ts(2,9): error TS18055: 'Enum.D' has a string type, but must have syntactically recognizable string syntax when 'isolatedModules' is enabled.
enum2.ts(3,9): error TS2304: Cannot find name 'A'.
enum2.ts(4,9): error TS2304: Cannot find name 'X'.
enum2.ts(8,14): error TS2567: Enum declarations can only merge with namespace declarations.
enum2.ts(9,9): error TS1066: In ambient enum declarations member initializer must be constant expression.
enum2.ts(9,9): error TS2304: Cannot find name 'A'.
script-namespaces.ts(1,11): error TS1280: Namespaces are not allowed in global script files when 'isolatedModules' is enabled. If this file is not intended to be a global script, set 'moduleDetection' to 'force' or add an empty 'export {}' statement.


==== script-namespaces.ts (1 errors) ====
    namespace Instantiated {
              ~~~~~~~~~~~~
!!! error TS1280: Namespaces are not allowed in global script files when 'isolatedModules' is enabled. If this file is not intended to be a global script, set 'moduleDetection' to 'force' or add an empty 'export {}' statement.
        export const x = 1;
    }
    namespace Uninstantiated {
        export type T = number;
    }
    declare namespace Ambient {
        export const x: number;
    }
    
==== module-namespaces.ts (0 errors) ====
    export namespace Instantiated {
        export const x = 1;
    }
    
==== enum1.ts (2 errors) ====
    enum Enum { A, B, C }
         ~~~~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
!!! related TS6203 enum2.ts:1:6: 'Enum' was also declared here.
    declare enum Enum { X = 1_000_000 }
                 ~~~~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
    const d = 'd';
    
==== enum2.ts (7 errors) ====
    enum Enum {
         ~~~~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
!!! related TS6203 enum1.ts:1:6: 'Enum' was also declared here.
        D = d,
            ~
!!! error TS18055: 'Enum.D' has a string type, but must have syntactically recognizable string syntax when 'isolatedModules' is enabled.
        E = A, // error
            ~
!!! error TS2304: Cannot find name 'A'.
        Y = X, // error
            ~
!!! error TS2304: Cannot find name 'X'.
        Z = Enum.A
    }
    
    declare enum Enum {
                 ~~~~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
        F = A
            ~
!!! error TS1066: In ambient enum declarations member initializer must be constant expression.
            ~
!!! error TS2304: Cannot find name 'A'.
    }